--- a/widget.html
+++ b/widget.html
@@ -5,11 +5,9 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <!-- <script src='main.js'></script> -->
     <!-- <script src='clock.js'></script> -->
     <!-- <script src='music-player.js'></script> -->
-    <script src='template-copy.js'></script>
-    <!-- <script src='clock-2.js'></script> -->
+    <script src='todo.js'></script>
 </head>
 <body>
     <h1>
